--- a/src/Components/Dashboard.css
+++ b/src/Components/Dashboard.css
@@ -16,3 +16,9 @@
     display: flex;
     flex-direction: column;
 }
+@media only screen and (max-width:600px){
+    .home-box{
+        flex-direction: column;
+        gap:30px
+    }
+}
