--- a/src/Components/Dashboard.css
+++ b/src/Components/Dashboard.css
@@ -8,7 +8,7 @@
     margin-top: 5%;
     width: 100%;
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     justify-content: space-around;
     align-items: center;
 }
